User may specify blacklist values

--- a/popup/index.html
+++ b/popup/index.html
@@ -8,9 +8,13 @@
   <body>
     <h3 class="title">Facebook Filter</h1>
     <p class="subtitle">
-      Filter out political posts from your newsfeed
+      Exclude posts that match the following regex:
     </p>
+    <form>
+      <textarea></textarea><br/>
+      <input type="submit" value="Save">
+    </form>
     <a href="chrome://extensions/">Click here to manage this extension</a>
-    <script type="text/javascript" src="link.js"></script>
+    <script type="text/javascript" src="menu.js"></script>
   </body>
 </html>
